maven-debian-helper (0.2) unstable; urgency=low

  UNRELEASED
  * Refactoring.

 -- Torsten Werner <twerner@debian.org>  Wed, 17 Dec 2008 23:19:00 +0100

maven-debian-helper (0.1) unstable; urgency=low

  * Initial release. (Closes: #508511)

 -- Torsten Werner <twerner@debian.org>  Thu, 11 Dec 2008 20:06:35 +0100